# Snake

./: .gitignore  Aimer.cpp  Aimer.hpp  Ball.cpp  Ball.h  CMakeLists.txt  Fruit.cpp  Fruit.h  Fruit.hpp  Functions.cpp  Functions.h  Functions.hpp  Graphics.cpp  Graphics.hpp  Image.cpp  Imagg.cpp  Imagg.h  Makefile  Object.hpp  README.md  Router.cpp  Router.hpp  Snake.cpp  Snake.hpp  State.cpp  State.h  State.hpp  Wall.cpp  Wall.hpp  clean  compile  compile_manual  link  main.cpp  main_snake.cpp
_scripts/: clean  close  compile_manual  find_str  run  unlink
_textures/: 0_FRUIT.tga  0_TAIL.tga  1_BODY.tga  1_HEAD.tga  1_TAIL.tga  2_FRUIT.tga  2_HEAD.tga  2_TAIL.tga  3_FRUIT.tga  4_HEAD.tga  4_TAIL.tga  5_TAIL.tga  6_TAIL.tga  7_FRUIT.tga  7_TAIL.tga
core/: Ball.cpp  Ball.hpp  Common.cpp  Common.hpp  Functions.cpp  Functions.hpp  State.cpp  State.hpp  StateDisplay.cpp  StateInit.cpp  StateInitFin.cpp  StateKeyboard.cpp
graphics/: Graphics.cpp  Graphics.hpp  GraphicsCore.cpp  GraphicsLoop.cpp  Image.cpp  Image.hpp  opengl_config.h
objects/: Fruit.cpp  Fruit.hpp  FruitDisplay.cpp  FruitPushBack.cpp  Object.cpp  Object.hpp  Snake.cpp  Snake.hpp  SnakeAI.cpp  SnakeCore.cpp  SnakeDisplay.cpp  Wall.cpp  Wall.hpp  WallCore.cpp
objects/ai_snake/: Aimer.cpp  Aimer.hpp  AimerCore.cpp  AimerFuncs.cpp  Router.cpp  Router.hpp  RouterCore.cpp  RouterFuncs.cpp
resources/: Info.plist  snake.desktop  snake.icns
textures/: 0_HEAD.tga  1_FRUIT.tga  2_BODY.tga  3_BODY.tga  3_HEAD.tga  3_TAIL.tga  4_BODY.tga  4_FRUIT.tga  5_BODY.tga  5_FRUIT.tga  5_HEAD.tga  5_TAIL.tga  6_BODY.tga  6_FRUIT.tga  6_HEAD.tga  7_BODY.tga  7_HEAD.tga  BACKGROUND.tga  Cross.tga  WALL2.tga  selection.tga
tools/: build_app_osx  build_appimage
